Add support for subscriptions
